1. 修改(响应 生成) 文本框字体颜色; 2. 优化项目可执行文件路径选择; 3. 默认打开操作项目.

--- a/ModelFactory/Base.lproj/Main.storyboard
+++ b/ModelFactory/Base.lproj/Main.storyboard
@@ -687,10 +687,10 @@
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <size key="minSize" width="307" height="163"/>
+                                            <size key="minSize" width="322" height="163"/>
                                             <size key="maxSize" width="463" height="10000000"/>
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="307" height="163"/>
+                                            <size key="minSize" width="322" height="163"/>
                                             <size key="maxSize" width="463" height="10000000"/>
                                         </textView>
                                     </subviews>
@@ -725,10 +725,10 @@
                                             <rect key="frame" x="0.0" y="0.0" width="223" height="163"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <size key="minSize" width="307" height="163"/>
+                                            <size key="minSize" width="322" height="163"/>
                                             <size key="maxSize" width="463" height="10000000"/>
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="307" height="163"/>
+                                            <size key="minSize" width="322" height="163"/>
                                             <size key="maxSize" width="463" height="10000000"/>
                                         </textView>
                                     </subviews>
@@ -872,12 +872,23 @@
                             <textField verticalHuggingPriority="750" id="gnN-QD-AjD">
                                 <rect key="frame" x="91" y="124" width="324" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" placeholderString="可执行文件路径,例如:/Users/Johnson/iOS.xcodeproj" drawsBackground="YES" id="PnO-Pc-Aqr">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" continuous="YES" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" placeholderString="可执行文件路径,例如:/Users/Johnson/iOS.xcodeproj" id="PnO-Pc-Aqr">
                                     <font key="font" size="11" name="STHeitiSC-Light"/>
                                     <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <button id="FDT-aK-AhF">
+                                <rect key="frame" x="91" y="125" width="324" height="19"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <buttonCell key="cell" type="roundRect" bezelStyle="roundedRect" alignment="center" state="on" inset="2" id="0LF-Mo-scf">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="cellTitle"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="clickChooseFile:" target="XfG-lQ-9wD" id="lur-co-DEJ"/>
+                                </connections>
+                            </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="h7C-Ig-cVr">
                                 <rect key="frame" x="430" y="124" width="60" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
